Feat : Creating server, controller, and connection to db; The app may fetch data from db

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "03",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/server.ts",
   "scripts": {
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
