--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "03",
   "version": "1.0.0",
-  "main": "./src/server.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
